fix some z-indexing

--- a/sass/_objects.header.scss
+++ b/sass/_objects.header.scss
@@ -87,7 +87,6 @@ position: relative;
 
 #menu-secondary {
 position: relative;
-z-index: 2;
 }
 
 #menu-secondary li a {
